# SupGIT

./: AGENTS.md  Cargo.toml  README.md  install.sh  uninstall.sh
.github/workflows/: mirror.yaml  publish.yml  release.yml
sgit/src/: main.rs
src/: cli.rs  main.rs  status.rs
src/commands/: alias.rs  branch.rs  commit.rs  mod.rs  stage.rs  sync.rs  update.rs
website/: README.md  index.html  install.sh  styles.css  uninstall.sh
