[package]
name = "sgit"
version = "0.2.0"
edition = "2024"
description = "A simple Git CLI wrapper for common Git operations"
license = "AGPL-3.0-only"
repository = "https://github.com/ThomasNowProductions/SGIT"
homepage = "https://github.com/ThomasNowProductions/SGIT"

[dependencies]
anyhow = "1.0"
clap = { version = "4.5", features = ["derive"] }
dialoguer = "0.11"
dirs = "6.0"

[profile.release]
lto = true
codegen-units = 1
opt-level = 3
strip = true
