[package]
name = "supgit"
version = "0.3.0"
edition = "2026"
description = "SupGit, the GIT CLI simplified."
license = "AGPL-3.0-only"
repository = "https://github.com/ThomasNowProductions/SupGIT"
homepage = "https://github.com/ThomasNowProductions/SupGIT"

[dependencies]
anyhow = "1.0"
clap = { version = "4.5", features = ["derive"] }
dialoguer = "0.11"
dirs = "6.0"

[profile.release]
lto = true
codegen-units = 1
opt-level = 3
strip = true
